[metadata]
package_name = astroSABER
description = astroSABER: Self-Absorption Baseline ExtractoR developed for systematic baseline fitting
long_description = See README.md
author = Jonas Syed
author_email = syed [at] mpia-hd.mpg.de
license = BSD 3-Clause
url = https://github.com/astrojoni89/astroSABER
edit_on_github = True
github_project = astroSABER/astroSABER
# install_requires should be formatted as a comma-separated list, e.g.:
install_requires = astropy, numpy, scipy, matplotlib, tqdm
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.0
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6
